syntax = "proto3";

package com.amazonaws.athena.connector.lambda.proto.metadata;

import 'TableName.proto';
import 'Block.proto';

option java_multiple_files = true;

message GetTableLayoutResponse {
  optional string type = 1 [json_name="@type"];
  optional string catalogName = 2;
  optional com.amazonaws.athena.connector.lambda.proto.domain.TableName tableName = 3;
  optional com.amazonaws.athena.connector.lambda.proto.data.Block partitions = 4;
}
